# simulations

./: README.md  deploy.sh  docker-compose.yaml  nginx.conf
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  data.py  main.py
backend/app/apis/: apollo.py  chat.py  tweets.py
frontend/: Dockerfile  index.html  middleware.js  next.config.mjs  package-lock.json  package.json  wrangler.toml
frontend/app/: layout.jsx  page.jsx
frontend/app/lib/: theme.js
frontend/app/provider/: main-provider.jsx
frontend/components/common/: BaseButton.jsx  Icon.jsx
frontend/components/layout/Sidebar/: SidebarItem.jsx  UserInfo.jsx  index.jsx
frontend/components/pages/simulation/: index.jsx  simulation-tab.jsx
frontend/components/pages/simulation/Apollo/: ApolloDialog.jsx  ApolloFirstHeader.jsx  ApolloItem.jsx  index.jsx
frontend/components/pages/simulation/CharGPT/: ChatGPTAnswer.jsx  ChatGPTContent.jsx  ChatGPTFooter.jsx  ChatGPTHeader.jsx  ChatGPTQuestion.jsx  ChatGTPSidebar.jsx  index.jsx
frontend/components/pages/simulation/TwitterSocial/: TweetInfo.jsx  TweetItems.jsx  TweetList.jsx  TweetLoader.jsx  TwitterSidebar.jsx  index.jsx
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/Layout/: Panel.jsx
frontend/src/Pages/Simulations/: Simulations.jsx
frontend/store/Apollo/: useApolloStore.jsx
frontend/store/Twitter/: useTwitterStore.jsx
frontend/utils/api/: axiosClient.js  handleApiError.js  index.js
frontend/utils/data/: index.js
frontend/utils/function/: index.js
frontend/utils/validation/: index.js
